--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1"
-chrono = { version = "0.4", features = ["std"] }
+chrono = { version = "0.4", features = ["std", "serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 source-chain = "0.1"
@@ -27,5 +27,6 @@ tokio-stream = "0.1"
 
 [dev-dependencies]
 anyhow = "1"
+dotenv = "0.15.0"
 rusty-hook = "0.11"
 tokio = { version = "1", features = ["full"] }
