--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ sqlx-error = "0.1"
 thiserror = "1"
 tokio = "1"
 tokio-stream = "0.1"
+tracing = "0.1"
 
 
 [dev-dependencies]
@@ -30,3 +31,4 @@ anyhow = "1"
 dotenv = "0.15.0"
 rusty-hook = "0.11"
 tokio = { version = "1", features = ["full"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
