Split CI test job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,8 @@ on: [push, pull_request]
 name: Continuous integration
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -18,6 +17,14 @@ jobs:
 
       - name: Clippy
         run: cargo clippy --all-features --workspace --bins --examples --tests -- -D warnings
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
 
       - name: Test
         run: cargo test --all-features --workspace --bins --examples --tests
