--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,25 +3,8 @@ on: [push, pull_request]
 name: Continuous integration
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
-    env:
-      DATABASE_URL: postgresql://postgres:postgres@localhost/postgres
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -29,19 +12,19 @@ jobs:
           toolchain: stable
           components: rustfmt, clippy
 
-      - name: Install sqlx-cli
-        run: cargo install sqlx-cli
-
-      - name: Setup Database
-        run: |
-          sqlx database create
-          sqlx migrate run
-
       - name: Format
         run: cargo fmt -- --check
 
       - name: Clippy
         run: cargo clippy --all-features --workspace --bins --examples --tests -- -D warnings
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
 
       - name: Test
         run: cargo test --all-features --workspace --bins --examples --tests
