--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.0.7"
 async-trait = "0.1"
 chrono = { version = "0.4", features = ["std", "serde"] }
 code-path = "0.3"
+displaydoc = "0.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 source-chain = "0.1"
