--- a/.rusty-hook.toml
+++ b/.rusty-hook.toml
@@ -1,16 +1,5 @@
 [hooks]
-pre-commit = """\
-    cargo fmt -- --check \
-    && cargo test --all-features --workspace --bins --examples --tests \
-    && cargo clippy --all-features --workspace --bins --examples --tests -- -D warnings \
-    && cargo sqlx prepare && git add .sqlx \
-    && cargo sync-readme && git add README.md \
-    && typos \
-"""
-pre-push = """\
-    cargo sqlx prepare --check \
-    && cargo sync-readme -c \
-"""
+pre-commit = "./pre-commit.sh"
 
 [logging]
 verbose = true
