--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ async-trait = "0.1"
 chrono = { version = "0.4", features = ["std", "serde"] }
 code-path = "0.3"
 displaydoc = "0.2"
+num_cpus = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 source-chain = "0.1"
