--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,50 +12,50 @@ env:
 jobs:
     rustfmt:
         runs-on: ubuntu-latest
-
         steps:
             - name: Checkout
               uses: actions/checkout@v3
 
-            - name: Set up Rust
+            - name: Nightly Rust
               uses: actions-rs/toolchain@v1
               with:
                   toolchain: nightly
                   components: rustfmt
 
-            - name: Cargo fmt
+            - name: Rustfmt
               run: cargo fmt -- --check
 
     clippy:
         runs-on: ubuntu-latest
-
         steps:
             - name: Checkout
               uses: actions/checkout@v3
 
-            - name: Set up Rust
+            - name: Stable Rust
               uses: actions-rs/toolchain@v1
               with:
                   toolchain: stable
                   components: clippy
 
             - name: Clippy
-              run: cargo clippy --bins --examples --tests -- -D warnings
+              run: cargo clippy --all-targets -- -D warnings
 
     test:
         runs-on: ubuntu-latest
-
         steps:
             - name: Checkout
               uses: actions/checkout@v3
 
-            - name: Set up Rust
+            - name: Stable Rust
               uses: actions-rs/toolchain@v1
               with:
                   toolchain: stable
 
-            - name: Cargo test
-              run: cargo test --bins --examples --tests
+            - name: Test all targets
+              run: cargo test --all-targets
+
+            - name: Test docs
+              run: cargo test --doc
 
     typos:
         runs-on: ubuntu-latest
@@ -70,18 +70,34 @@ jobs:
 
     cargo_sort:
         runs-on: ubuntu-latest
-
         steps:
             - name: Checkout
               uses: actions/checkout@v3
 
-            - name: Set up Rust
+            - name: Stable Rust
               uses: actions-rs/toolchain@v1
               with:
                   toolchain: stable
 
             - name: Install cargo-sort
-              run: cargo install cargo-sort
+              run: cargo install --locked cargo-sort
 
-            - name: Are Cargo configs sorted?
+            - name: Check `Cargo.toml` sort
               run: cargo sort -c
+
+    machete:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Stable Rust
+              uses: actions-rs/toolchain@v1
+              with:
+                  toolchain: stable
+
+            - name: Install `cargo-machete`
+              run: cargo install --locked cargo-machete
+
+            - name: Check unused Cargo dependencies
+              run: cargo machete
