--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,103 +1,117 @@
 name: CI
 on:
-    push:
-        branches:
-            - main
-            - ci
-    pull_request:
+  push:
+    branches:
+      - main
+      - ci
+  pull_request:
 
 env:
-    SQLX_OFFLINE: true
+  SQLX_OFFLINE: true
 
 jobs:
-    rustfmt:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+  rustfmt:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            - name: Nightly Rust
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: nightly
-                  components: rustfmt
+      - name: Nightly Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          components: rustfmt
 
-            - name: Rustfmt
-              run: cargo fmt -- --check
+      - name: Rustfmt
+        run: cargo +nightly fmt -- --check
 
-    clippy:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+  clippy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            - name: Stable Rust
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
-                  components: clippy
+      - name: Stable Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          components: clippy
 
-            - name: Clippy
-              run: cargo clippy --all-targets -- -D warnings
+      - name: Clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
 
-    test:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+  rustdoc:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            - name: Stable Rust
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
+      - name: Stable Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
 
-            - name: Test all targets
-              run: cargo test --all-targets
+      - name: Rustdoc
+        run: cargo rustdoc --all-features -- -D warnings
 
-            - name: Test docs
-              run: cargo test --doc
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    typos:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+      - name: Stable Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
 
-            - name: Check typos in `rust` folder
-              uses: crate-ci/typos@master
-              with:
-                  files: .
+      - name: Test all targets
+        run: cargo test --all-targets
 
-    cargo_sort:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+      - name: Test docs
+        run: cargo test --doc
 
-            - name: Stable Rust
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
+  typos:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            - name: Install cargo-sort
-              run: cargo install --locked cargo-sort
+      - name: Check typos
+        uses: crate-ci/typos@master
+        with:
+          files: .
 
-            - name: Check `Cargo.toml` sort
-              run: cargo sort -c
+  cargo_sort:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    machete:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+      - name: Stable Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
 
-            - name: Stable Rust
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
+      - name: Install cargo-sort
+        run: cargo install --locked cargo-sort
 
-            - name: Install `cargo-machete`
-              run: cargo install --locked cargo-machete
+      - name: Check `Cargo.toml` sort
+        run: cargo sort -c
 
-            - name: Check unused Cargo dependencies
-              run: cargo machete
+  shear:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Stable Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+
+      - name: Install `cargo-shear`
+        run: cargo install --locked cargo-shear
+
+      - name: Check unused Cargo dependencies
+        run: cargo shear
